--- a/style.css
+++ b/style.css
@@ -265,3 +265,42 @@ button:hover {
         opacity: 1;
     }
 }
+
+@media (max-width: 768px) {
+  .containerMain {
+    flex-direction: column;
+  }
+
+  #leftContainer,
+  #rightContainer {
+    width: 100%;
+    height: auto;
+    padding: 1em;
+    animation: slideInLeft 1.5s ease-in-out forwards;
+  }
+
+  #hero h1 {
+    font-size: 1.8em;
+  }
+
+  form {
+    width: 95%;
+    padding: 15px;
+  }
+
+  fieldset {
+    grid-template-columns: 1fr;
+    gap: 1em;
+  }
+
+  button {
+    width: 100%;
+  }
+
+  #logo {
+    width: 60%;
+    position: static;
+    margin: 1em auto;
+  }
+}
+
